# starry-bpy-type-stubs

./: .editorconfig  .flake8  .gitattributes  .gitignore  README.md  dictionary.txt  pyproject.toml  renovate.json
.github/workflows/: lint.yml
bgl/: __init__.pyi
bmesh/: __init__.pyi
bmesh/ops/: __init__.pyi
bmesh/types/: __init__.pyi
bpy/: __init__.pyi
bpy/app/: __init__.pyi
bpy/app/handlers/: __init__.pyi
bpy/app/timers/: __init__.pyi
bpy/app/translations/: __init__.pyi
bpy/context/: __init__.pyi
bpy/context/preferences/: __init__.pyi
bpy/msgbus/: __init__.pyi
bpy/ops/: __init__.pyi
bpy/ops/export_scene/: __init__.pyi
bpy/ops/icyp/: __init__.pyi
bpy/ops/import_scene/: __init__.pyi
bpy/ops/mesh/: __init__.pyi
bpy/ops/object/: __init__.pyi
bpy/ops/outliner/: __init__.pyi
bpy/ops/preferences/: __init__.pyi
bpy/ops/uv/: __init__.pyi
bpy/ops/vrm/: __init__.pyi
bpy/ops/wm/: __init__.pyi
bpy/props/: __init__.pyi
bpy/types/: __init__.pyi
bpy/utils/: __init__.pyi
bpy_extras/: __init__.pyi
bpy_extras/io_utils/: __init__.pyi
gpu/: __init__.pyi
gpu/types/: __init__.pyi
gpu_extras/: __init__.pyi
gpu_extras/batch/: __init__.pyi
idprop/: __init__.pyi
idprop/types/: __init__.pyi
mathutils/: __init__.pyi
scripts/: format.bat  format.sh  lint.bat  lint.sh
src/bmesh-stubs/types/: __init__.pyi
src/bpy-stubs/app/: __init__.pyi
src/bpy-stubs/context/preferences/: __init__.pyi
src/bpy-stubs/ops/: __init__.pyi
src/bpy-stubs/ops/export_scene/: __init__.pyi
src/bpy-stubs/ops/import_scene/: __init__.pyi
src/bpy-stubs/ops/vrm/: __init__.pyi
src/bpy-stubs/ops/wm/: __init__.pyi
src/bpy-stubs/props/: __init__.pyi
src/bpy-stubs/types/: __init__.pyi
src/bpy_extras-stubs/: __init__.pyi
src/bpy_extras-stubs/node_shader_utils/: __init__.pyi
src/bpy_extras-stubs/view3d_utils/: __init__.pyi
src/gpu-stubs/types/: __init__.pyi
src/mathutils-stubs/: __init__.pyi
subprojects/pseudo-bpy/: README.md  pyproject.toml
subprojects/pseudo-bpy/src/bgl/: __init__.py
subprojects/pseudo-bpy/src/bmesh/: __init__.py
subprojects/pseudo-bpy/src/bmesh/ops/: __init__.py
subprojects/pseudo-bpy/src/bmesh/types/: __init__.py
subprojects/pseudo-bpy/src/bpy/: __init__.py
subprojects/pseudo-bpy/src/bpy/app/: __init__.py
subprojects/pseudo-bpy/src/bpy/app/handlers/: __init__.py
subprojects/pseudo-bpy/src/bpy/app/timers/: __init__.py
subprojects/pseudo-bpy/src/bpy/app/translations/: __init__.py
subprojects/pseudo-bpy/src/bpy/context/: __init__.py
subprojects/pseudo-bpy/src/bpy/context/preferences/: __init__.py
subprojects/pseudo-bpy/src/bpy/context/preferences/view/: __init__.py
subprojects/pseudo-bpy/src/bpy/msgbus/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/export_scene/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/icyp/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/import_scene/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/mesh/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/object/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/outliner/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/preferences/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/uv/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/vrm/: __init__.py
subprojects/pseudo-bpy/src/bpy/ops/wm/: __init__.py
subprojects/pseudo-bpy/src/bpy/props/: __init__.py
subprojects/pseudo-bpy/src/bpy/types/: __init__.py
subprojects/pseudo-bpy/src/bpy/utils/: __init__.py
subprojects/pseudo-bpy/src/bpy_extras/: __init__.py
subprojects/pseudo-bpy/src/bpy_extras/io_utils/: __init__.py
subprojects/pseudo-bpy/src/bpy_extras/node_shader_utils/: __init__.py
subprojects/pseudo-bpy/src/bpy_extras/view3d_utils/: __init__.py
subprojects/pseudo-bpy/src/gpu/types/: __init__.py
subprojects/pseudo-bpy/src/gpu_extras/: __init__.py
subprojects/pseudo-bpy/src/gpu_extras/batch/: __init__.py
subprojects/pseudo-bpy/src/idprop/: __init__.py
subprojects/pseudo-bpy/src/idprop/types/: __init__.py
subprojects/pseudo-bpy/src/mathutils/: __init__.py
tools/: format.bat  format.sh  generate-pseudo-bpy.sh  lint.bat  lint.sh
