[tool.poetry]
name = "starry-bpy-type-stubs"
version = "1.0.0"
description = ""
authors = ["Isamu Mogi <isamu@leafytree.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
bpy = "3.6.*"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-no-pep420 = "*"
flake8-scream = "*"
flake8-simplify = "*"
flake8-spellcheck = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pylint = "*"
pyright = "*"

[tool.black]
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
strict = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true

[[tool.mypy.overrides]]
module = [
    "io_scene_vrm.*",
]
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.9"

[tool.pylint.format]
max-module-lines = 2000

[tool.pylint.design]
max-args = 46
max-locals = 46
min-public-methods = 0

[tool.pylint."messages control"]
disable = [
    "fixme",
    "import-error",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "multiple-statements",
    "redefined-builtin",
    "unused-argument",
]

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingModuleSource = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
