[project]
requires-python = ">=3.9"

[tool.poetry]
name = "bpy"
version = "1.0.0"
description = ""
authors = ["Isamu Mogi <isamu@leafytree.jp>"]
readme = "README.md"
packages = [
    { include = "bgl", from = "src" },
    { include = "bmesh", from = "src" },
    { include = "bpy", from = "src" },
    { include = "bpy_extras", from = "src" },
    { include = "gpu", from = "src" },
    { include = "gpu_extras", from = "src" },
    { include = "idprop", from = "src" },
    { include = "mathutils", from = "src" },
]

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint]
extend-ignore = [
    "ARG001", # Unused function argument: `region`
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in `__init__`
    "PLC0414", # Import alias does not rename original package

    "TCH001", # Move application import `x` into a type-checking block
    "TCH002", # Move third-party import `x` into a type-checking block
    "TCH003", # Move standard library import `x` into a type-checking block
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
